crates/rationes/tests/snapshots/contract__help.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 143
expression: pretty(&help)
---
{
  "about": "res holdings: the accounts, goods, and rights you hold (§8.3)",
  "format_version": 2,
  "kinds": [
    "account",
    "asset",
    "claim"
  ],
  "name": "rationes",
  "series": "balance",
  "short": "rat",
  "verbs": [
    "add",
    "edit",
    "rename",
    "move",
    "mv",
    "rm",
    "list",
    "ls",
    "get",
    "series",
    "where",
    "schema",
    "help",
    "version"
  ],
  "version": "0.1.0"
}
