crates/rationes/tests/snapshots/contract__on_disk.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 697
expression: "format!(\"{}--- balance ---\\n{}\", holding, reading)"
---
{
  "refs": [],
  "data": {
    "currency": "usd"
  }
}
--- balance ---
{"key":"20260718","refs":[],"data":{"amount":4200.0}}
