crates/rationes/tests/snapshots/contract__refusal_rename_onto_an_occupied_slug.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 526
expression: pretty(&err)
---
{
  "error": {
    "code": 3,
    "msg": "rationes:checking already names a record at crp — renaming onto it would make the two indistinguishable, and there is no history to tell them apart again (§7.2, §18)"
  }
}
