crates/rationes/tests/snapshots/contract__refusals_entity_as_node.snap
---
source: crates/rationes/tests/contract.rs
assertion_line: 587
expression: "format!(\"{}\\n\\n{}\", pretty(&rename), pretty(&moved))"
---
{
  "error": {
    "code": 2,
    "msg": "\"some_bank\" is an entity-as-node: its slug is its node's definition, so renaming it renames the node, which no core may do — use `pan rename crp_some_bank --def <new>` (§5.5, §7.2)"
  }
}

{
  "error": {
    "code": 2,
    "msg": "\"some_bank\" is an entity-as-node: its home is its own node, so re-homing it is a node move — use `pan mv crp_some_bank --to <code>`. A file mv would strand the node and everything homed at it (§5.5, §7.2, I3)"
  }
}
